# local-ai-engineering-mesh

./: README.fr.md  README.ja.md  README.md  README.ru.md  README.zh-CN.md  pyproject.toml
demo/: mesh-demo.sh
docs/: ARCHITECTURE.md  BOOTSTRAP-SPEC.md  COMPARE-WITH-CLAUDE.md  CROSS-PLATFORM.md  DEMO.md  EXECUTION-LOOP.md  FRAMEWORK-DIAGRAM.md  IMAGE-LABELS.md  MEMORY-SCHEMA.md  OPERATING-CHARTER.md  POSTER-SPEC.md  QUICKSTART.md  REPO-MAP.md  STACK.md  TOOL-LAYERS.md  WORKFLOWS-AND-COMBOS.md
docs/media/: README.md
mesh/: __init__.py  cli.py  runtime.py
mesh/commands/: handoff_cmd.py  init_cmd.py  inspect_cmd.py  verify_cmd.py
scripts/: setup-project-runtime.sh
skills/: README.md
skills/governed-deploy/: SKILL.md
skills/governed-deploy/scripts/: detect_deploy_target.sh
skills/project-bootstrap/: SKILL.md
skills/safe-pr-flow/: SKILL.md
skills/state-store-memory/: SKILL.md
skills/visual-evidence/: SKILL.md
social/: X-LONG-POST-CN.md  X-LONG-THREAD-CN.md  X-POSTS-CN.md
templates/: AGENTS.example.md  policy.env.example
templates/antigravity/: README.md  knowledge-stub.md  local-ai-mesh-workflow.md
templates/claude/: CLAUDE.example.md  README.md  commands-example.md
templates/codex/: README.md  config.example.toml  instructions.example.md
templates/cursor/: README.md
templates/global-memory/: global-operating-charter.md  global-routing-rules.md  global-skill-layering.md
templates/project-memory/: PROJECT-active-context.md  PROJECT-command-map.md  PROJECT-decisions.md  PROJECT-patterns.md  PROJECT-troubleshooting.md
(+33 files in other folders)
