[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-engineering-mesh"
version = "0.1.0"
description = "Minimal CLI for bootstrapping and verifying a local AI engineering mesh."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "bidaiAI" }]
dependencies = []

[project.scripts]
mesh = "mesh.cli:main"

[tool.setuptools]
packages = ["mesh", "mesh.commands"]
